add Parsers.php, file1.json, file2.json

--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "type": "project",
     "license": "MIT",
     "autoload": {
-        "psr-4": {
-            "Hexlet\\Code\\": "src/"
-        }
+        "files": [
+            "src/Parsers.php"
+        ]
     },
     "authors": [
         {
