--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "files": [
-            "src/Parsers.php"
+            "src/Parsers.php",
+            "src/Differ.php"
         ]
     },
     "authors": [
