--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,9 @@
     },
     "bin": [
         "bin/gendiff"
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^12.2",
+        "squizlabs/php_codesniffer": "*"
+    }
 }
