--- a/.github/workflows/my-check.yml
+++ b/.github/workflows/my-check.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Run linter
         run: make lint
       - name: Run test
-        run: make test-coverage
+        run: make test
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
