--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
 sonar.projectKey=gabrvp_php-project-48
 sonar.organization=gabrvp
-sonar.sources=src/
+sonar.sources=src
+sonar.language=php
+sonar.sourceEncoding=UTF-8
