--- a/.github/workflows/my-check.yml
+++ b/.github/workflows/my-check.yml
@@ -2,7 +2,7 @@ name: my-check
 on: push
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Setup PHP
