--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=gabrvp_php-project-48
 sonar.organization=gabrvp
+sonar.sources=src/
 sonar.php.coverage.reportPaths=build/logs/clover.xml
