--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
             "src/Parsers.php",
             "src/Differ.php",
             "src/Formatters.php",
-            "src/Formatters/Stylish.php"
+            "src/Formatters/Stylish.php",
+            "src/Formatters/Plain.php"
         ]
     },
     "authors": [
